# timeseries-ml

./: .gitignore  README.md  crypto_data.py  pyproject.toml  requirements.txt  tech_timeseries.ipynb  timeseries.ipynb
