[project]
name = "tibra"
version = "0.1.0"
description = "Financial ML and quantitative analysis notebooks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core data science
    "numpy>=1.26.4",
    "pandas>=2.2.0",
    # Machine Learning
    "scikit-learn>=1.5.0",
    # PyTorch with CUDA 12.1 support
    "torch>=2.5.1",
    "torchvision>=0.20.0",
    "torchaudio>=2.5.0",
    # Visualization
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    # Optional: Hyperparameter tuning
    "optuna>=4.0.0",
    # Quantitative finance (if you have custom packages)
    # "quantmod",  # uncomment if available
    # "quantstats-lumi",  # uncomment if available
    # XGBoost (for other notebooks)
    "xgboost>=2.1.0",
    # SHAP (for other notebooks)
    "shap>=0.46.0",
    "ipykernel>=7.0.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
