[project]
name = "timeseries-ml"
version = "0.1.0"
description = "Financial ML and quantitative analysis notebooks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.9.0",
    "yfinance>=0.2.0",
    "ipykernel>=7.0.1",
    "duckdb>=1.4.4",
    "xgboost>=3.2.0",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
]

[tool.uv.sources]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
